--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- Search Engine Optimization -->
     <meta name="robots" content="index, nofollow" />
-    <meta name="description" content="This is the end of the internet. Or wait ... may be you just tried to load my domain, that is n$
+    <meta name="description" content="This is the end of the internet. Or wait ... may be you just tried to load my domain, that is not for you!" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1a$
