Fixed default page HTML

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <!-- Search Engine Optimization -->
     <meta name="robots" content="index, nofollow" />
-    <meta name="description" content="This is the end of the internet. Or wait ... may be you just tried to load my domain, that is not for you!" />
+    <meta name="description" content="This is the end of the internet. Or wait ... may be you just tried to load my domain, that is not used for real stuff right now. ;-)" />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1a$
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body>
